backend-dev.err
[401] Invalid email or password.
[401] Invalid email or password.
[401] Invalid email or password.
[401] Invalid email or password.
[423] Account temporarily locked due to repeated failed login attempts.
[423] Account temporarily locked due to repeated failed login attempts.
[401] Invalid email or password.
[401] Invalid email or password.
[401] Invalid email or password.
[401] Invalid email or password.
[423] Account temporarily locked due to repeated failed login attempts.
[423] Account temporarily locked due to repeated failed login attempts.
[423] Account temporarily locked due to repeated failed login attempts.
[423] Account temporarily locked due to repeated failed login attempts.
[423] Account temporarily locked due to repeated failed login attempts.
[423] Account temporarily locked due to repeated failed login attempts.
[423] Account temporarily locked due to repeated failed login attempts.
[423] Account temporarily locked due to repeated failed login attempts.
[423] Account temporarily locked due to repeated failed login attempts.
[423] Account temporarily locked due to repeated failed login attempts.
[423] Account temporarily locked due to repeated failed login attempts.
[423] Account temporarily locked due to repeated failed login attempts.
[423] Account temporarily locked due to repeated failed login attempts.
[423] Account temporarily locked due to repeated failed login attempts.
[423] Account temporarily locked due to repeated failed login attempts.
[423] Account temporarily locked due to repeated failed login attempts.
[423] Account temporarily locked due to repeated failed login attempts.
[423] Account temporarily locked due to repeated failed login attempts.
[423] Account temporarily locked due to repeated failed login attempts.
[423] Account temporarily locked due to repeated failed login attempts.
[423] Account temporarily locked due to repeated failed login attempts.
[401] Invalid email or password.
[423] Account temporarily locked due to repeated failed login attempts.
[423] Account temporarily locked due to repeated failed login attempts.
[423] Account temporarily locked due to repeated failed login attempts.
[423] Account temporarily locked due to repeated failed login attempts.
[423] Account temporarily locked due to repeated failed login attempts.
[423] Account temporarily locked due to repeated failed login attempts.
[423] Account temporarily locked due to repeated failed login attempts.
[423] Account temporarily locked due to repeated failed login attempts.
[423] Account temporarily locked due to repeated failed login attempts.
[423] Account temporarily locked due to repeated failed login attempts.
[423] Account temporarily locked due to repeated failed login attempts.
[401] Invalid email or password.
[401] Invalid email or password.
[401] Invalid email or password.
[401] Invalid email or password.
[423] Account temporarily locked due to repeated failed login attempts.
[423] Account temporarily locked due to repeated failed login attempts.
file:///D:/CyberShield/backend/src/routes/threatRoutes.js:6
  simulateFakeHacker,
  ^^^^^^^^^^^^^^^^^^
SyntaxError: The requested module '../controllers/threatController.js' does not provide an export named 'simulateFakeHacker'
    at #asyncInstantiate (node:internal/modules/esm/module_job:326:21)
    at process.processTicksAndRejections (node:internal/process/task_queues:104:5)
    at async ModuleJob.run (node:internal/modules/esm/module_job:429:5)
    at async node:internal/modules/esm/loader:639:26
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:101:5)

Node.js v25.9.0
[401] Invalid or expired token.
[401] Invalid or expired token.
[500] connect ECONNREFUSED 127.0.0.1:27017
